--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>EasyShop - Tu tienda en línea</title>
+
+    <!-- Enlace a los archivos CSS de Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+
+    <!-- Otros estilos personalizados -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body class="light-mode">
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">EasyShop</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Carrito</a>
+            </li>
+          </ul>
+        </div>
+        <button id="mode-toggle" class="btn ms-auto" aria-label="Cambiar modo">
+          <img src="icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
+        </button>
+      </div>
+    </nav>
+
+    <!-- Contenido principal -->
+    <main class="container mt-4">
+      <h1>Bienvenido a EasyShop</h1>
+      <p>
+        Explora nuestro catálogo y encuentra los productos que necesitas de
+        manera rápida y sencilla.
+      </p>
+      <!-- Aquí puedes agregar el resto del contenido de tu página -->
+    </main>
+
+    <!-- Pie de página -->
+    <footer class="bg-light text-center py-3 light-mode dark-mode">
+      <div class="container">
+        <p>© 2023 EasyShop. Todos los derechos reservados.</p>
+      </div>
+    </footer>
+
+    <!-- Enlace a los archivos JS de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script>
+      const modeToggle = $('#mode-toggle');
+      const body = $('body');
     
-</body>
+      modeToggle.on('click', () => {
+        body.toggleClass('dark-mode');
+        body.toggleClass('light-mode');
+        modeToggle.toggleClass('btn-dark');
+        modeToggle.toggleClass('btn-light');
+
+        const navbar = document.querySelector('.navbar');
+        navbar.classList.toggle('dark-mode');
+        navbar.classList.toggle('light-mode');
+
+        const navLinkHoverColor = getComputedStyle(navbar).getPropertyValue('--nav-link-hover-color');
+        const navLinkHoverBackground = getComputedStyle(navbar).getPropertyValue('--nav-link-hover-background');
+
+        document.documentElement.style.setProperty('--nav-link-hover-color', navLinkHoverColor);
+        document.documentElement.style.setProperty('--nav-link-hover-background', navLinkHoverBackground);
+      });
+    </script>
+  </body>
 </html>
