--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 
   <!-- Otros estilos personalizados -->
   <link rel="stylesheet" href="styles.css" />
@@ -29,8 +31,13 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Inicio</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Productos</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Productos</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Categoría 1</a></li>
+              <li><a class="dropdown-item" href="#">Categoría 2</a></li>
+              <li><a class="dropdown-item" href="#">Categoría 3</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Carrito</a>
@@ -50,42 +57,109 @@
       Explora nuestro catálogo y encuentra los productos que necesitas de
       manera rápida y sencilla.
     </p>
-    <!-- Aquí puedes agregar el resto del contenido de tu página -->
   </main>
 
-  <!-- Pie de página -->
-  <footer class="bg-light text-center py-3 light-mode dark-mode">
+  <button type="button" class="slick-prev">Previous</button>
+  <div class="center">
+    <div><img src="https://picsum.photos/id/400/720/480" class="px-5" alt="Slide 1"></div>
+    <div><img src="https://picsum.photos/id/410/720/480" class="px-5" alt="Slide 2"></div>
+    <div><img src="https://picsum.photos/id/411/720/480" class="px-5" alt="Slide 3"></div>
+  </div>
+
+  <br><br>
+
+  <section class="product-section">
+    <h2 class="text-center text-muted">Nuestros productos destacados</h2>
+    <hr>
     <div class="container">
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-sm-6 p-2">
+          <div class="card">
+            <img src="https://picsum.photos/id/4/720" alt="Producto 1">
+            <div class="card-body">
+              <h5 class="card-title">Producto 1</h5>
+              <p class="card-text">Descripción del producto 1</p>
+              <p class="card-price">$10.00</p>
+              <button class="btn btn-primary">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 p-2">
+          <div class="card">
+            <img src="https://picsum.photos/id/5/720" alt="Producto 2">
+            <div class="card-body">
+              <h5 class="card-title">Producto 2</h5>
+              <p class="card-text">Descripción del producto 2</p>
+              <p class="card-price">$15.00</p>
+              <button class="btn btn-primary">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 p-2">
+          <div class="card">
+            <img src="https://picsum.photos/id/6/720" alt="Producto 3">
+            <div class="card-body">
+              <h5 class="card-title">Producto 3</h5>
+              <p class="card-text">Descripción del producto 3</p>
+              <p class="card-price">$20.00</p>
+              <button class="btn btn-primary">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 p-2">
+          <div class="card">
+            <img src="https://picsum.photos/id/7/720" alt="Producto 4">
+            <div class="card-body">
+              <h5 class="card-title">Producto 4</h5>
+              <p class="card-text">Descripción del producto 4</p>
+              <p class="card-price">$20.00</p>
+              <button class="btn btn-primary">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 p-2">
+          <div class="card">
+            <img src="https://picsum.photos/id/9/720" alt="Producto 5">
+            <div class="card-body">
+              <h5 class="card-title">Producto 5</h5>
+              <p class="card-text">Descripción del producto 5</p>
+              <p class="card-price">$20.00</p>
+              <button class="btn btn-primary">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-4 col-sm-6 p-2">
+          <div class="card">
+            <img src="https://picsum.photos/id/10/720" alt="Producto 6">
+            <div class="card-body">
+              <h5 class="card-title">Producto 6</h5>
+              <p class="card-text">Descripción del producto 6</p>
+              <p class="card-price">$20.00</p>
+              <button class="btn btn-primary">Agregar al carrito</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <br><br><br><br>
+
+  <!-- Pie de página -->
+  <!-- <footer class="bg-light text-center py-3 light-mode dark-mode m-0">
+    <div class="container ">
       <p>© 2023 EasyShop. Todos los derechos reservados.</p>
     </div>
-  </footer>
+  </footer> -->
 
-  <!-- Enlace a los archivos JS de Bootstrap -->
+  <!-- Enlace a los archivos JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-    crossorigin="anonymous"></script>
-  <script>
-    const modeToggle = $('#mode-toggle');
-    const body = $('body');
-
-    modeToggle.on('click', () => {
-      body.toggleClass('dark-mode');
-      body.toggleClass('light-mode');
-      modeToggle.toggleClass('btn-dark');
-      modeToggle.toggleClass('btn-light');
-
-      const navbar = document.querySelector('.navbar');
-      navbar.classList.toggle('dark-mode');
-      navbar.classList.toggle('light-mode');
-
-      const navLinkHoverColor = getComputedStyle(navbar).getPropertyValue('--nav-link-hover-color');
-      const navLinkHoverBackground = getComputedStyle(navbar).getPropertyValue('--nav-link-hover-background');
-
-      document.documentElement.style.setProperty('--nav-link-hover-color', navLinkHoverColor);
-      document.documentElement.style.setProperty('--nav-link-hover-background', navLinkHoverBackground);
-    });
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="index.js"></script>
   </script>
 </body>
 
