--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./styles/styles.css" />
+  <link rel="stylesheet" href="./styles/loader.css" />
 </head>
 
 <body class="light-mode">
+  <!-- Loader -->
+  <div id="loader" class="loader">
+    <div class="loader-spinner"></div>
+  </div>  
+
   <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -91,6 +97,7 @@
   <!-- Custom JS -->
   <script type="module" src="./javascript/index.js"></script>
   <script type="module" src="./javascript/darkmode.js"></script>
+  <script type="module" src="./javascript/loader.js"></script>
 </body>
 
 </html>
