--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a id="nav-home" class="nav-link" href="#"><i class="ri-home-2-fill"></i> Inicio</a>
+            <a id="nav-home" class="nav-link" href="./index.html""><i class="ri-home-2-fill"></i> Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <a id="nav-catalogue" class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"><i class="ri-shopping-basket-2-fill"></i> Productos</a>
@@ -46,9 +46,6 @@
           </li>
         </ul>
       </div>
-      <button id="mode-toggle" class="btn ms-auto" aria-label="Cambiar modo">
-        <img src="./icons/dark_mode.png" alt="Modo Oscuro" class="mode-icon">
-      </button>
     </div>
   </nav>
 
